# learning-mcp-with-python

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/scripts/: check-server-starts.sh
.github/workflows/: ci.yml
app/: auth.py  config.py  main.py  mcp_http.py  mcp_stdio.py
app/mcp/: __init__.py  contacts.py  messaging.py
app/routers/: health.py  messaging.py
app/schemas/: messaging.py
app/services/: contacts.py  messaging.py
development/: lessons-learned.md
development/http/: http-client.env.json  send-message.http  well-known.http
development/http/api/: send-message.http
development/http/mcp/: mcp-create-session.http  mcp-list-tools.http
development/keycloak-setup/: http-client.env.json
tests/: test_auth.py  test_smoke.py
tests/mcp/: test_contacts_tool.py  test_messaging_tool.py
tests/routers/: test_health_router.py  test_messaging_router.py
tests/schemas/: test_messaging_schema.py
tests/services/: test_contacts.py  test_messaging.py
