[project]
name = "learning-mcp-with-python"
version = "0.1.0"
description = "Learning MCP with Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "mcp[cli]>=1.27.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
