[project]
name = "learning-mcp-with-python"
version = "0.1.0"
description = "Learning MCP with Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "mcp[cli]>=1.27.2",
    "pydantic-settings>=2.7.0",
    "pyjwt[crypto]>=2.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.16",
]
